--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
 babel==2.16.0
+chardet==5.2.0
 Django==5.1.1
+pillow==11.0.0
+reportlab==4.2.5
 setuptools==75.1.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
