--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 babel==2.16.0
 chardet==5.2.0
 Django==5.1.1
+django-appconf==1.0.6
+django-cpf-cnpj==1.0.0
 pillow==11.0.0
 reportlab==4.2.5
 setuptools==75.1.0
