--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
+# pip freeze > requirements.txt
+# pip install -r requirements.txt
 asgiref==3.8.1
 babel==2.16.0
+certifi==2024.8.30
+cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.0
+cryptography==44.0.0
 Django==5.1.1
 django-appconf==1.0.6
 django-cpf-cnpj==1.0.0
+idna==3.10
+lxml==5.3.0
 pillow==11.0.0
+pycparser==2.22
+pyOpenSSL==24.3.0
 reportlab==4.2.5
+requests==2.32.3
 setuptools==75.1.0
+signxml==4.0.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.3
